--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 # Google App Engine generated folder
 appengine-generated/
+There were a couple of surprises just outside the top three - with Valtteri Bottas' Alfa Romeo fourth and Daniel Ricciardo's Alpha Tauri sixth.
+
