--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@
 appengine-generated/
 There were a couple of surprises just outside the top three - with Valtteri Bottas' Alfa Romeo fourth and Daniel Ricciardo's Alpha Tauri sixth.
 
+Scotland will play Germany in the opening match of Euro 2024 after being drawn in the same group as the hosts.
+
+Hungary and Switzerland complete Group A, while England are in Group C alongside Denmark, Slovenia and Serbia.
+
+Wales would be in Group D with France, the Netherlands and Austria at next summer's tournament should they qualify via March's play-offs.
+
+Germany will face Steve Clarke's Scotland in the opener at the Allianz Arena in Munich on Friday, 14 June.
+
+Euro 2020 finalists England will begin their campaign on 16 June against Serbia.
+
+Defending champions Italy, who beat Gareth Southgate's side on penalties in the 2020 final, are up against three-time winners Spain, Croatia and Albania in Group B.
+
+The final of Euro 2024 will take place on 14 July at Berlin's Olympiastadion.
+
+Group A: Germany, Scotland, Hungary, Switzerland
+
+Group B: Spain, Croatia, Italy, Albania
+
+Group C: Slovenia, Denmark, Serbia, England
+
+Group D: Play-off winners A, Netherlands, Austria, France
